# crabmail

./: .gitignore  Cargo.toml  HOWTO  README  README.md  TODO  crabmail.conf  run.sh
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
crabmail/: Cargo.toml  README.md
crabmail/src/: filters.rs  main.rs  utils.rs
crabmail/templates/: base.html  thread.html  threadlist.html
crabmail/templates/static/: style.css
doc/: crabmail-config.5  crabmail-config.5.scd  crabmail.1  crabmail.1.scd
misc/: filter.sv  imapwatch.sh  mbsyncrc  rsync.sh
src/: arg.rs  config.rs  filters.rs  jwzthreading.rs  maildir.rs  main.rs  mbox.rs  models.rs  style.css  threading.rs  time.rs  util.rs  utils.rs
src/templates/: gmi.rs  html.rs  mod.rs  rss.url  util.rs  xml.rs
templates/: base.html  thread.html  threadlist.html
templates/static/: style.css
