[package]
name = "crabmail"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[features]
default = []

[dependencies]
anyhow = "1.0.52"
linkify = "0.8.0" 
# using my fork just to upstream patches faster.
mail-builder = {git = "https://github.com/alexwennerberg/mail-builder"}
mail-parser = { git = "https://github.com/stalwartlabs/mail-parser", default-features=false, tag = "0.8.2" }
once_cell = "1.9.0"
urlencoding = "2.1.0"
