[package]
name = "crabmail"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

[features]
default = []

[dependencies]
anyhow = "1.0.82"
linkify = "0.10.0"
# using my fork just to upstream patches faster.
mail-builder = "0.3.1"
mail-parser = "0.9.3"
urlencoding = "2.1.3"
